--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "aotus"]
 	path = aotus
-	url = git@github.com:apes-suite/aotus.git
+	url = ../aotus.git
 [submodule "polynomials"]
 	path = polynomials
-	url = git@github.com:apes-suite/polynomials.git
+	url = ../polynomials.git
 [submodule "bin"]
 	path = bin
-	url = git@github.com:apes-suite/apes-bin.git
+	url = ../apes-bin.git
 [submodule "tem"]
 	path = tem
-	url = git@github.com:apes-suite/tem-source.git
+	url = ../tem-source.git
 [submodule "sdr"]
 	path = sdr
-	url = git@github.com:apes-suite/seeder-source.git
+	url = ../seeder-source.git
