--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -28,6 +28,6 @@ jobs:
         with:
           python-version: '3.13'
 
-      - name: Build Musubi
+      - name: Build Seeder
         run: |
           FC=mpif90 bin/waf --mpicmd 'mpiexec --oversubscribe' distclean configure build debug
