Point to github pages in the README
chown docu directory from docker action
no dispatch for Fordoc workflow

--- a/.github/workflows/ford.yml
+++ b/.github/workflows/ford.yml
@@ -1,7 +1,6 @@
 name: Fordoc
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - 'main'
@@ -27,6 +26,10 @@ jobs:
         with:
           waf-args: "--fordonline configure docu"
           obtain: "build/ford/sdr/docu"
+
+      - name: Change docu ownership
+        run: |
+          sudo chown -R $USER docu
 
       - name: Deploy Documentation
         uses: JamesIves/github-pages-deploy-action@v4
