--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -7,7 +7,7 @@ on:
     types: [checks_requested]
 
 jobs:
-  compilation:
+  compile-test:
     permissions:
       checks: write
       pull-requests: write
