--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -7,25 +7,10 @@ on:
     types: [checks_requested]
 
 jobs:
-  compilation:
+  compile-test:
     permissions:
       checks: write
       pull-requests: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Build Seeder
-        uses: apes-suite/build-action@v1.1.1
-        with:
-          waf-args: "configure build debug"
-
-      - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v2.19.0
-        with:
-          files: |
-            build/**/waf-utest.xml
-          check_name: "Waf Unit Tests"
+    uses: apes-suite/reus/.github/workflows/compile.yml@v1.3.3
+    with:
+      name: Seeder
